# PATTERN

./: CMakeLists.txt  readme  test.cpp
include/: Archer.h  Army.h  ArmyBuilder.h  ArmyFactory.h  ArmyUnit.h  Catapult.h  DeadSoul.h  Eagle.h  Game.h  GiantWorm.h  InfantryCreature.h  Krebain.h  ManKing.h  Mechanisme.h  Nazgul.h  Side.h  UrugHai.h  User.h  WargRider.h
src/: Archer.cpp  Army.cpp  ArmyBuilder.cpp  ArmyFactory.cpp  ArmyUnit.cpp  Catapult.cpp  DeadSoul.cpp  Eangle.cpp  Game.cpp  GiantWorm.cpp  InfantryCreature.cpp  Krebain.cpp  ManKing.cpp  Mechanisme.cpp  Nazgul.cpp  UrugHai.cpp  User.cpp  WargRider.cpp
